Fix z-index bug in type grid

--- a/app/components/resources/typegrid/type-grid.scss
+++ b/app/components/resources/typegrid/type-grid.scss
@@ -2,6 +2,11 @@
  * @author Thomas Kleinke
  */
 type-grid {
+  document-info {
+    position: relative;
+    z-index: 6;
+  }
+
   #type-grid {
     height: calc(100vh - 100px);
     margin-top: 2px;
